# L4_Linux_SDK

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  compiler.arm.cmake
app/: CMakeLists.txt
app/ar8030/: CMakeLists.txt  ar8030.c  ar8030.h  ar_net_api.h  bb_dev.c  bb_dev.h  net_dev.c  session.c  session.h  session_callback.c  session_callback.h  session_daemon_ctrl.c  session_debug.c  session_exec.c  session_hotplug.c  session_hotplug.h  session_ioctl.c  session_ioctl.h  session_platform_ctrl.c  session_platform_ctrl.h  session_socket.c  session_socket.h  session_socket_datagram_ext.c  session_socket_datagram_ext.h  session_uart_ext.c  socket.c  socket_fd.c  socket_fd.h  socket_linux.c  undefined_fun.c
app/cmd_dbg/: CMakeLists.txt  cmd_dbg.cpp
app/l4_linux_mvi/: CMakeLists.txt  l4_linux_mvi.c
app/ota_upgrade/: CMakeLists.txt  chk.c  chk.h  crc.c  crc.h  ota_upgrade.c
app/tuntap/: CMakeLists.txt  l4_tuntap.cpp  l4_tuntap.h  tuntap.cpp  tuntap.h
com/: CMakeLists.txt  CrashDump.h  bb_api.h  bb_config.h  bg_proc.c  bg_proc.h  com_cfg.h  com_log.c  com_log.h  debug_rpc.h  hex_disp.h  ioctl_tab.c  ioctl_tab.h  list.h  prj_rpc.h  ringbuffer.c  ringbuffer.h  ringbuffer_ext.c  socketfd_port.c  socketfd_port.h  timspec_helper.c  timspec_helper.h  unused.h  usbpack.c  usbpack.h
daemon/: CMakeLists.txt  base_node.c  base_node.h  callback_node.c  callback_node.h  daemon.h  dev_event_node.c  dev_event_node.h  main.c  normal_node.c  normal_node.h  rpc_cmdline.c  rpc_cmdline.h  rpc_debug.c  rpc_debug.h  rpc_dev_bind.c  rpc_dev_bind.h  rpc_dev_proc.c  rpc_init.c  rpc_init.h  rpc_node.h  rpc_platform_ctrl.c  rpc_platform_ctrl.h  sock_node.c  sock_node.h  sock_node_rpc.c  usb_event_list.c  usb_event_list.h
daemon/dev8030/: CMakeLists.txt  dev8030.c  dev8030.h  hotplug_rpc.c  hotplug_rpc.h
daemon/dev8030/uart8030/: CMakeLists.txt  linux_uart_backend.c  uart_dev.c  uart_dev.h  uart_endian.h  uart_errno.h  uart_opt.h  uart_pkt.c  uart_pkt.h  uart_util.h
daemon/dev8030/usb8030/: CMakeLists.txt  usb_dev.c  usb_dev.h
docs/: L4 Linux SDK 开发手册.md  api.md  linux_development_manual.md  quick_start.md
examples/: CMakeLists.txt
examples/00_common/: CMakeLists.txt  README.md  bb_demo_common.h
examples/01_basic_info/: README.md  basic_info.c
examples/02_pair_manager/: CMakeLists.txt  README.md  pair_manager.c
examples/03_link_monitor/: CMakeLists.txt  README.md  link_monitor.c
examples/04_link_config/: CMakeLists.txt  README.md  link_config.c
examples/05_config_file/: CMakeLists.txt  README.md  config_file.c
examples/06_minidb_config/: CMakeLists.txt  README.md  minidb_config.c
examples/07_uart_config/: CMakeLists.txt  README.md  uart_config.c
examples/08_socket_transfer/: CMakeLists.txt  README.md  socket_transfer.c
examples/basic_info/: CMakeLists.txt  basic_info.c
examples/common/: bb_demo_common.c
script/: clean.sh  cmk-arm.sh  cmk-local.sh
third_package/: libtuntap-win.patch  libtuntap.tar
third_package/libusb/: libusb-cmake.tar
